--- a/rclone/rclone.service
+++ b/rclone/rclone.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/rclone mount od:/ /root/od \
- --vfs-cache-mode full \
+ --vfs-cache-mode off \
  --umask 0000 \
  --default-permissions \
  --allow-non-empty \
