--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -99,7 +99,7 @@ enable-peer-exchange=true
 #bt-request-peer-speed-limit=50K
 # 客户端伪装, PT需要
 peer-id-prefix=-TR2940-
-user-agent=Transmission/2.94
+user-agent=LogStatistic
 peer-agent=Transmission/2.94
 # 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
 seed-ratio=0.1
