--- a/filebrowser/config.json
+++ b/filebrowser/config.json
@@ -6,7 +6,7 @@
 	"alternativeReCaptcha": false,
 	"reCaptchaKey": "",
 	"reCaptchaSecret": "",
-	"database": "/etc/filebrowser/filebrowser.db",
+	"database": "/etc/filebrowser.db",
 	"log": "stdout",
 	"plugin": "",
 	"scope": "/root",
