--- a/rclone/rclone.service
+++ b/rclone/rclone.service
@@ -13,7 +13,7 @@ ExecStart=/usr/bin/rclone mount od:/ /root/od \
  --transfers 3 \
  --buffer-size 32M \
  --low-level-retries 200
-ExecStop=fusermount -u /root/od
+ExecStop=/bin/fusermount -qzu /root/od
 Restart=on-abort
 User=root
 
