--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -92,7 +92,7 @@ dht-entry-point6=dht.transmissionbt.com:6881
 # DHT网络监听端口, 默认:6881-6999
 #dht-listen-port=6881-6999
 # 本地节点查找, PT需要禁用, 默认:false
-#bt-enable-lpd=true
+bt-enable-lpd=true
 # 种子交换, PT需要禁用, 默认:true
 enable-peer-exchange=true
 # 每个种子限速, 对少种的PT很有用, 默认:50K
