--- a/nezha/agent.service
+++ b/nezha/agent.service
@@ -15,7 +15,7 @@ Type=simple
 User=root
 Group=root
 WorkingDirectory=/root/
-ExecStart=/root/agent -d -s agent.findmvps.tk:5555 -p 
+ExecStart=/root/agent -d -s 
 Restart=always
 #Environment=DEBUG=true
 
