--- a/filebrowser/config.json
+++ b/filebrowser/config.json
@@ -1,7 +1,7 @@
 {
 	"port": 8080,
     	"noAuth": false,
-	"baseURL": "/file",
+	"baseURL": ".",
 	"address": "0.0.0.0",
 	"alternativeReCaptcha": false,
 	"reCaptchaKey": "",
