--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -85,8 +85,10 @@ listen-port=51413
 #bt-max-peers=55
 # 打开DHT功能, PT需要禁用, 默认:true
 enable-dht=true
+dht-file-path=/root/.aria2/dht.dat
 # 打开IPv6 DHT功能, PT需要禁用
 enable-dht6=true
+dht-file-path6=/root/.aria2/dht6.dat
 # IPv6 DHT 网络引导节点
 dht-entry-point6=dht.transmissionbt.com:6881
 # DHT网络监听端口, 默认:6881-6999
