--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,8 +1,11 @@
 ## '#'开头为注释内容, 选项都有相应的注释说明, 根据需要修改 ##
 ## 被注释的选项填写的是默认值, 建议在需要修改时再取消注释  ##
 
-## 上传 ##
+# 上传 #
 on-download-complete=/root/.aria2/upload.sh
+
+# 检查证书 #
+check-certificate=false
 
 ## 文件保存相关 ##
 
