--- a/tele-aria2/tele-aria2.service
+++ b/tele-aria2/tele-aria2.service
@@ -3,7 +3,7 @@ Description=Tele-Aria2
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/tele-aria2 -c /etc/tele-aria2/config.json
+ExecStart=/usr/bin/tele-aria2 -c /root/.config/tele-aria2/config.json
 
 [Install]
 WantedBy=multi-user.target
