--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -8,7 +8,7 @@ rpc-save-upload-metadata=false
 # 检查证书 #
 check-certificate=false
 # 强制加密 #
-bt-force-encryption
+bt-force-encryption=true
 
 
 ## 文件保存相关 ##
