--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -21,7 +21,7 @@ dir=/root/downloads
 # 预分配所需时间: none < falloc ? trunc < prealloc
 # falloc和trunc则需要文件系统和内核支持
 # NTFS建议使用falloc, EXT3/4建议trunc, MAC 下需要注释此项
-file-allocation=trunc
+file-allocation=prealloc
 # 断点续传
 continue=true
 
