--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -3,6 +3,8 @@
 
 # 上传 #
 on-download-complete=/root/.aria2/upload.sh
+# 删除 #
+on-download-stop=/root/.aria2/delete.sh
 # 保存上传的种子 #
 rpc-save-upload-metadata=false
 # 检查证书 #
@@ -21,7 +23,7 @@ dir=/root/downloads
 # 预分配所需时间: none < falloc ? trunc < prealloc
 # falloc和trunc则需要文件系统和内核支持
 # NTFS建议使用falloc, EXT3/4建议trunc, MAC 下需要注释此项
-file-allocation=prealloc
+file-allocation=none
 # 断点续传
 continue=true
 
@@ -54,7 +56,7 @@ input-file=/root/.aria2/aria2.session
 # 在Aria2退出时保存`错误/未完成`的下载任务到会话文件
 save-session=/root/.aria2/aria2.session
 # 定时保存会话, 0为退出时才保存, 需1.16.1以上版本, 默认:0
-#save-session-interval=60
+save-session-interval=0
 
 ## RPC相关设置 ##
 
