--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -11,6 +11,8 @@ rpc-save-upload-metadata=false
 check-certificate=false
 # 强制加密 #
 bt-force-encryption=true
+# 强制保存 #
+force-save=true
 
 
 ## 文件保存相关 ##
