--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -10,7 +10,7 @@ rpc-save-upload-metadata=false
 # 检查证书 #
 check-certificate=false
 # 强制加密 #
-bt-force-encryption=true
+#bt-force-encryption=true
 # 强制保存 #
 #force-save=true
 
@@ -41,11 +41,11 @@ min-split-size=10M
 # 单个任务最大线程数, 添加时可指定, 默认:5
 split=16
 # 整体下载速度限制, 运行时可修改, 默认:0
-max-overall-download-limit=30M
+max-overall-download-limit=20M
 # 单个任务下载速度限制, 默认:0
 max-download-limit=20M
 # 整体上传速度限制, 运行时可修改, 默认:0
-max-overall-upload-limit=20M
+max-overall-upload-limit=10M
 # 单个任务上传速度限制, 默认:0
 max-upload-limit=10M
 # 禁用IPv6, 默认:false
@@ -91,19 +91,19 @@ listen-port=51413
 # 单个种子最大连接数, 默认:55
 #bt-max-peers=55
 # 打开DHT功能, PT需要禁用, 默认:true
-enable-dht=false
+enable-dht=true
 dht-file-path=/root/.aria2/dht.dat
 # 打开IPv6 DHT功能, PT需要禁用
-enable-dht6=false
+enable-dht6=true
 dht-file-path6=/root/.aria2/dht6.dat
 # IPv6 DHT 网络引导节点
 dht-entry-point6=dht.transmissionbt.com:6881
 # DHT网络监听端口, 默认:6881-6999
 #dht-listen-port=6881-6999
 # 本地节点查找, PT需要禁用, 默认:false
-bt-enable-lpd=false
+bt-enable-lpd=true
 # 种子交换, PT需要禁用, 默认:true
-enable-peer-exchange=false
+enable-peer-exchange=true
 # 每个种子限速, 对少种的PT很有用, 默认:50K
 #bt-request-peer-speed-limit=50K
 # 客户端伪装, PT需要
@@ -112,7 +112,7 @@ user-agent=Transmission/2.94
 peer-agent=Transmission/2.94
 # 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
 seed-ratio=0
-seed-time=14400
+seed-time=0
 # 强制保存会话, 即使任务已经完成, 默认:false
 # 较新的版本开启后会在任务完成后依然保留.aria2文件
 #force-save=false
