--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -3,7 +3,9 @@
 
 # 上传 #
 on-download-complete=/root/.aria2/upload.sh
-# 删除 #
+# 日志 #
+log-level=info
+#删除 #
 on-download-stop=/root/.aria2/delete.sh
 # 保存上传的种子 #
 rpc-save-upload-metadata=false
