--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -11,13 +11,14 @@ on-download-stop=/root/.aria2/delete.sh
 rpc-save-upload-metadata=false
 # 检查证书 #
 check-certificate=false
-# 强制加密 #
-#bt-force-encryption=true
+# 删除未选择的文件 #
+bt-remove-unselected-file=true
 # 强制保存 #
 #force-save=true
 # 外部IP地址 #
 #bt-external-ip=
-
+# 强制加密 #
+#bt-force-encryption=true
 
 ## 文件保存相关 ##
 
@@ -117,9 +118,6 @@ peer-agent=Transmission/2.94
 # 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
 seed-ratio=0
 seed-time=0
-# 强制保存会话, 即使任务已经完成, 默认:false
-# 较新的版本开启后会在任务完成后依然保留.aria2文件
-#force-save=false
 # BT校验相关, 默认:true
 #bt-hash-check-seed=true
 # 继续之前的BT任务时, 无需再次校验, 默认:false
