--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,12 +1,20 @@
 ## '#'开头为注释内容, 选项都有相应的注释说明, 根据需要修改 ##
 ## 被注释的选项填写的是默认值, 建议在需要修改时再取消注释  ##
 
+# BT监听端口, 当端口被屏蔽时使用, 默认:6881-6999
+listen-port=51413
+
+seed-time=0
+
 # 强制保存 #
 #force-save=true
-# 外部IP地址 #
-#bt-external-ip=
+
 # 强制加密 #
 #bt-force-encryption=true
+
+# 代理 #
+#all-proxy=http://
+
 # 上传 #
 on-download-complete=/root/.aria2/upload.sh
 # 日志 #
@@ -91,8 +99,6 @@ rpc-secret=6800
 
 # 当下载的是一个种子(以.torrent结尾)时, 自动开始BT任务, 默认:true
 follow-torrent=true
-# BT监听端口, 当端口被屏蔽时使用, 默认:6881-6999
-listen-port=51413
 # 单个种子最大连接数, 默认:55
 #bt-max-peers=55
 # 打开DHT功能, PT需要禁用, 默认:true
@@ -117,7 +123,6 @@ user-agent=Transmission/2.94
 peer-agent=Transmission/2.94
 # 当种子的分享率达到这个数时, 自动停止做种, 0为一直做种, 默认:1.0
 seed-ratio=0
-seed-time=0
 # BT校验相关, 默认:true
 #bt-hash-check-seed=true
 # 继续之前的BT任务时, 无需再次校验, 默认:false
