--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,31 +1,32 @@
 ## '#'开头为注释内容, 选项都有相应的注释说明, 根据需要修改 ##
 ## 被注释的选项填写的是默认值, 建议在需要修改时再取消注释  ##
 
-# BT监听端口, 当端口被屏蔽时使用, 默认:6881-6999
+# BT监听端口
 listen-port=51413
 
+# 做种时间, 0为不做种
 seed-time=0
 
-# 强制保存 #
+# 强制保存
 #force-save=true
 
-# 强制加密 #
+# 强制加密
 #bt-force-encryption=true
 
-# 代理 #
-#all-proxy=http://
+# 代理
+#all-proxy=http://n:p@ip:port
 
-# 上传 #
+# 上传
 on-download-complete=/root/.aria2/upload.sh
-# 日志 #
+# 日志
 log-level=info
-#删除 #
+# 删除
 on-download-stop=/root/.aria2/delete.sh
-# 保存上传的种子 #
+# 保存上传的种
 rpc-save-upload-metadata=false
-# 检查证书 #
+# 检查证书
 check-certificate=false
-# 删除未选择的文件 #
+# 删除未选择的文件
 bt-remove-unselected-file=true
 
 ## 文件保存相关 ##
