--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -28,6 +28,8 @@ rpc-save-upload-metadata=false
 check-certificate=false
 # 删除未选择的文件
 bt-remove-unselected-file=true
+# 异步dns
+async-dns=false
 
 ## 文件保存相关 ##
 
@@ -53,7 +55,7 @@ max-connection-per-server=16
 # 假定size=10M, 文件为20MiB 则使用两个来源下载; 文件为15MiB 则使用一个来源下载
 min-split-size=10M
 # 单个任务最大线程数, 添加时可指定, 默认:5
-split=16
+split=4
 # 整体下载速度限制, 运行时可修改, 默认:0
 max-overall-download-limit=30M
 # 单个任务下载速度限制, 默认:0
