--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -65,7 +65,7 @@ max-overall-upload-limit=30M
 # 单个任务上传速度限制, 默认:0
 max-upload-limit=20M
 # 禁用IPv6, 默认:false
-disable-ipv6=false
+disable-ipv6=true
 
 ## 进度保存相关 ##
 
