--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,7 +1,13 @@
 ## '#'开头为注释内容, 选项都有相应的注释说明, 根据需要修改 ##
 ## 被注释的选项填写的是默认值, 建议在需要修改时再取消注释  ##
 
-min-tls-version=TLSv1.1
+# 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
+dir=/root/downloads
+
+# RPC监听端口, 端口被占用时可以修改, 默认:6800
+rpc-listen-port=6800
+# 设置的RPC授权令牌, v1.18.4新增功能, 取代 --rpc-user 和 --rpc-passwd 选项
+rpc-secret=6800
 
 # BT监听端口
 listen-port=51413
@@ -24,6 +30,9 @@ on-download-complete=/root/.aria2/upload.sh
 log-level=info
 # 删除
 on-download-stop=/root/.aria2/delete.sh
+
+min-tls-version=TLSv1.1
+
 # 保存上传的种
 rpc-save-upload-metadata=false
 # 检查证书
@@ -35,8 +44,7 @@ async-dns=false
 
 ## 文件保存相关 ##
 
-# 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
-dir=/root/downloads
+
 # 启用磁盘缓存, 0为禁用缓存, 需1.16以上版本, 默认:16M
 disk-cache=32M
 # 文件预分配方式, 能有效降低磁盘碎片, 默认:prealloc
